--- a/index.html
+++ b/index.html
@@ -32,30 +32,7 @@
         EPSG4326 = new proj4.Proj('EPSG:4326'),
         EPSG3006 = new proj4.Proj('EPSG:3006');
 
-    // var crs = new L.Proj.CRS('EPSG:3006',
-	// '+proj=utm +zone=33 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs',
-	// {
-	// 	resolutions: [
-	// 		8192, 4096, 2048, 1024, 512, 256, 128,
-	// 		64, 32, 16, 8, 4, 2, 1, 0.5
-	// 	],
-	// 	origin: [0, 0],
-	// 	bounds: L.bounds([218128.7031, 6126002.9379], [1083427.2970, 7692850.9468])
-	// })
-    // var map = new L.Map('map', {
-    //     crs: crs
-    // })
-    // L.tileLayer('https://api.geosition.com/tile/osm-bright-3006/{z}/{x}/{y}.png', {
-    //     maxZoom: 14,
-    //     minZoom: 0,
-    //     continuousWorld: true,
-    //     attribution: 'Map data © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>, Imagery © <a href="http://www.kartena.se/">Kartena</a>'
-    // }).addTo(map);
-    // map.setView([57.704, 11.965], 13);
-
-    var crs = new L.Proj.CRS('EPSG:3825',
-	'+proj=tmerc +lat_0=0 +lon_0=119 +k=0.9999 +x_0=250000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs',
-	{
+    var crs = new L.Proj.CRS('EPSG:3825', '+proj=tmerc +lat_0=0 +lon_0=119 +k=0.9999 +x_0=250000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs', {
 		resolutions: [
 			8192, 4096, 2048, 1024, 512, 256, 128,
 			64, 32, 16, 8, 4, 2, 1, 0.5
@@ -66,8 +43,15 @@
         crs: crs
     })
     L.tileLayer.wms('http://127.0.0.1/geoserver/Nangan/wms?', {
+        layers: 'Nangan:EMAP',
+        transparent: true,
+        format: 'image/png',
+        maxZoom: 22
+    }).addTo(map);
+    L.tileLayer.wms('http://127.0.0.1/geoserver/Nangan/wms?', {
         layers: 'Nangan:cityPlan',
         transparent: true,
+        opacity: 0.7,
         format: 'image/png',
         maxZoom: 22
     }).addTo(map);
